--- a/Ch02/01.md
+++ b/Ch02/01.md
@@ -8,15 +8,15 @@ git-scm.com/download/win
 
 بعد إنتهاء التحميل، ستقوم بتنزيل البرنامج من خلال الـSetup Wizrd والذي سيشيرك لجميع الخطوات اللازمة للتثبيت.
 
-![setup wizard](Screenshots/install3.png)
+![setup wizard](Screenshots\install3.PNG)
 
 أختر الموقع الذي تريد تثبيت البرنامج عليه.
 
-![install location](Screenshots/install1.png)
+![install location](Screenshots\install1.PNG)
 
 ثم قم بضغط زر التالي على جميع الخيارات، لتقوم بتنزيله بالطريقة الإفتراضية.
 
-![install steps](Screenshots/install2.png)
+![install steps](Screenshots\install2.PNG)
 
 وهكذا قمت بتحميل وتنزيل برنامج Git على جهازك.
 
