--- a/Ch07/01.md
+++ b/Ch07/01.md
@@ -10,14 +10,12 @@
 1. **Fast-Forward Merge:** في هذا النوع يتم الدمج بشكل مباشر، فعلى سبيل المثال يتم إستخدام هذا النوع عند إضافة ملف جديد (second.txt) على المشروع لأن ذلك لا يولد أي تعارضات في النسخة المسبقة، فكل ما تم عمله هو إنشاء ملف جديد وليس التعديل على ملف سابق، كما هو موضح في الشكل أدناه. 
 
 
-
-
-<img src="ffm.png" alt="Fast-forward merge" width="520 px"/>
+![Fast-Forward](ffm.png)
 
 
 2. **True Merge:** قد يتسبب هذا النوع في تعارضات في نسخ المشروع ، ولذلك لا يتم الدمج مباشرةً، وعند حصول ذلك يطلب Git من المستخدم أن يختار من الإجراءات التالية، إما الإحتفاظ بأحدث نسخة أو النسخة المسبق وجودها في المسار الرئيسي أو كلتاهما. مثال على ذلك هو عند قيام مستخدمين بالتعديل على ملف واحد، فعند حصول ذلك يقوم المستخدم الأول بحفظ نسخته على المسار الرئيسي مما يسبب مشكلة في التزامن بين النسخ، فالمستخدم الثاني في هذه الحالة يمتلك نسخة قديمة من الملف الذي تم تغييره وذلك يمثل تعارض كما هو موضح في الشكل أدناه.
 
-<img src="tm.png" alt="True merge" width="520 px"/>
+![True ](tm.png)
 
 
 </div>
