--- a/Ch02/01.md
+++ b/Ch02/01.md
@@ -8,15 +8,15 @@ git-scm.com/download/win
 
 بعد إنتهاء التحميل، ستقوم بتنزيل البرنامج من خلال الـSetup Wizrd والذي سيشيرك لجميع الخطوات اللازمة للتثبيت.
 
-![setup wizard](Screenshots\install3.PNG)
+<img src="./install1.png" alt="Install wized"/>
 
 أختر الموقع الذي تريد تثبيت البرنامج عليه.
 
-![install location](Screenshots\install1.PNG)
+<img src="./install2.png" alt="install location"/>
 
 ثم قم بضغط زر التالي على جميع الخيارات، لتقوم بتنزيله بالطريقة الإفتراضية.
 
-![install steps](Screenshots\install2.PNG)
+<img src="./install1.png" alt="Install steps"/>
 
 وهكذا قمت بتحميل وتنزيل برنامج Git على جهازك.
 
