--- a/Ch02/01.md
+++ b/Ch02/01.md
@@ -8,15 +8,15 @@ git-scm.com/download/win
 
 بعد إنتهاء التحميل، ستقوم بتنزيل البرنامج من خلال الـSetup Wizrd والذي سيشيرك لجميع الخطوات اللازمة للتثبيت.
 
-<img src="./install1.png" alt="Install wized"/>
+<img src="./install1.PNG" alt="Install wized"/>
 
 أختر الموقع الذي تريد تثبيت البرنامج عليه.
 
-<img src="./install2.png" alt="install location"/>
+<img src="./install2.PNG" alt="install location"/>
 
 ثم قم بضغط زر التالي على جميع الخيارات، لتقوم بتنزيله بالطريقة الإفتراضية.
 
-<img src="./install3.png" alt="Install steps"/>
+<img src="./install3.PNG" alt="Install steps"/>
 
 وهكذا قمت بتحميل وتنزيل برنامج Git على جهازك.
 
